[tool.poetry]
name = "jira-update-issue"
version = "0.1.0"
description = "Updates JIRA issues"
authors = ["Aliaksei Anikiyenka <aliaksei_anikiyenka@epam.com>"]
readme = "README.md"
packages = [{include = "jira_update_issue"}]

[tool.poetry.dependencies]
python = "^3.11"
jira = "^3.4.1"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
